
_____________________________________________________________________________________________________


                                       CFDWARP CHANGELOG

_____________________________________________________________________________________________________


2021 JUL 09a
  * in model/fluid/_Navier-Stokes/fluid_bdry.c
    - implemented the BDRY_WALLTFIXEDCATALYTIC1 boundary condition
  * in model/fluid/_Navier-Stokes_plasma/fluid_bdry.c
    - implemented the BDRY_WALLTFIXEDCATALYTIC1 boundary condition
  * in model/share/fluid_share.c
    - added the function update_w_at_catalytic_wall()
  * in src/control.c
    - in read_control_functions(), added the treatment of the function _spec()
  * in model/fluid/doc/Transport_Equations/report.tex
    - added the section "Catalytic Surface Boundary Conditions"


2021 JUN 16a
  * in model/fluid/_Navier-Stokes_plasma/fluid_bdry.c
    - in write_bdry_fluid_template(), added boundary condition BDRY_WALLTFIXEDTHERMIONIC1
    - added function _Vk_perp_to_bdry() 
    - in update_bdry_wall(), added parameter THERMIONIC
    - in update_bdry_wall(), made modifications for thermionic BC 
    

2021 JUN 12a
  * in model/chem/_Air_Plasma_11s/dunnkang1973.c
    - reaction 10 had the wrong rate: this has been fixed
  * in model/chem/_Air_Plasma_11s
    - added parent2021.c
  * in model/chem/_Air_Plasma_11s/doc/report.tex
    - added parent2021 model
    - fixed rate of reaction 10 of Dunn Kang model
    

2021 JUN 09a
  * in model/emfield/doc/Electrodynamics/report.tex
    - added Lorenz condition and electrodynamic potential


2021 APR 15b
  * updated config/removeproprietary.sh through make config
  

2021 APR 15a
  * in model/chem/.config
    - made the Air_Plasma_8s_28r_Macheret option non proprietary
  * in model/chem/_Air_Plasma_8s_28r_Macheret/chem.c
    - changed the license to BSD 2 clause
    

2021 APR 13a
  * in src/control.c
    - added reference farbar2013a
  * in model/chem/_Air_Plasma_11s/chem.hh